traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:3: error: type mismatch;
 found   : Unit
 required: Boolean
    while ((getX()!=getWorldWidth()) && getY()==getWorldHeight()){
    ^